Dynamic button state binding

--- a/Converter/Storyboard/Base.lproj/Main.storyboard
+++ b/Converter/Storyboard/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1HY-eh-cM9">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="500"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" horizontalCompressionResistancePriority="752" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QTc-rA-YkX">
+                                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" horizontalCompressionResistancePriority="752" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QTc-rA-YkX" customClass="TintButton" customModule="Converter" customModuleProvider="target">
                                                         <rect key="frame" x="187" y="100" width="40" height="40"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="QTc-rA-YkX" secondAttribute="height" multiplier="1:1" id="8nB-yx-yYA"/>
@@ -112,7 +112,7 @@
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                     </textField>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gce-k8-B3I">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gce-k8-B3I" customClass="PrimaryButton" customModule="Converter" customModuleProvider="target">
                                                         <rect key="frame" x="148" y="260" width="118.5" height="40"/>
                                                         <color key="backgroundColor" name="AccentColor"/>
                                                         <constraints>
